# anki_german

./: pyproject.toml
src/anki_german/: __init__.py
src/anki_german/translation/: __init__.py  anthropic.py  base.py  openai.py
