[tool.poetry]
name = "anki-german"
version = "0.1.0"
description = ""
authors = ["Askar Absemetov <ask.register@gmail.com>"]
readme = "README.md"
packages = [{include = "anki_german", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
